// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select (isCI = false) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = false) > can cancel 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "■  foo
│  opt0
│",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = false) > down arrow selects next option 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "[999D[5A",
  "[2B",
  "[J",
  "│  ○ opt0
│  ● opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt1",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = false) > renders option hints 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● opt0 (Hint 0)
│  ○ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = false) > renders option labels 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● Option 0
│  ○ Option 1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  Option 0",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = false) > renders options and message 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = false) > up arrow selects previous option 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "[999D[5A",
  "[2B",
  "[J",
  "│  ○ opt0
│  ● opt1
└
",
  "[999D[5A",
  "[2B",
  "[J",
  "│  ● opt0
│  ○ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = true) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = true) > can cancel 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "■  foo
│  opt0
│",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = true) > down arrow selects next option 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "[999D[5A",
  "[2B",
  "[J",
  "│  ○ opt0
│  ● opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt1",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = true) > renders option hints 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● opt0 (Hint 0)
│  ○ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = true) > renders option labels 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● Option 0
│  ○ Option 1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  Option 0",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = true) > renders options and message 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;

exports[`select (isCI = true) > up arrow selects previous option 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "[999D[5A",
  "[2B",
  "[J",
  "│  ○ opt0
│  ● opt1
└
",
  "[999D[5A",
  "[2B",
  "[J",
  "│  ● opt0
│  ○ opt1
└
",
  "[999D[5A",
  "[1B",
  "[J",
  "◇  foo
│  opt0",
  "
",
  "[?25h",
]
`;
